{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 36,
  "lineage": "f20e2dc4-4b91-f727-8b74-b6ebae5b32dd",
  "resources": [
    {
      "module": "module.tf-igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817775426354:internet-gateway/igw-0c614653809c6f0a4",
            "id": "igw-0c614653809c6f0a4",
            "owner_id": "817775426354",
            "tags": {
              "Name": "sprints-igw"
            },
            "tags_all": {
              "Name": "sprints-igw"
            },
            "vpc_id": "vpc-0a43a3e161f39d6e8"
          },
          "dependencies": [
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a4363a7d864a093",
            "arn": "arn:aws:ec2:us-east-1:817775426354:instance/i-003ff6f2446ebe67a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-003ff6f2446ebe67a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nginx",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05b503a318300ff3c",
            "private_dns": "ip-10-0-1-217.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.217",
            "public_ip": "54.173.35.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09c93787ad7d8c7dc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00195fda9b0b30b3f",
            "tags": {
              "Name": "Private-Instance-0"
            },
            "tags_all": {
              "Name": "Private-Instance-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a0f25d70a04b38b5"
            ]
          },
          "dependencies": [
            "module.tf-instance.data.aws_ami.amazon_ec2",
            "module.tf-security-group.aws_security_group.sg_pri",
            "module.tf-subnet.aws_subnet.subnets-private",
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a4363a7d864a093",
            "arn": "arn:aws:ec2:us-east-1:817775426354:instance/i-00522bc1339a9e0fa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00522bc1339a9e0fa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nginx",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a2755b66d5741619",
            "private_dns": "ip-10-0-3-55.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.55",
            "public_ip": "54.236.29.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02ff399340e01fc4e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04a98d27b5f221342",
            "tags": {
              "Name": "Private-Instance-1"
            },
            "tags_all": {
              "Name": "Private-Instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a0f25d70a04b38b5"
            ]
          },
          "dependencies": [
            "module.tf-instance.data.aws_ami.amazon_ec2",
            "module.tf-security-group.aws_security_group.sg_pri",
            "module.tf-subnet.aws_subnet.subnets-private",
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a4363a7d864a093",
            "arn": "arn:aws:ec2:us-east-1:817775426354:instance/i-0d5e1f675ee54c14d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d5e1f675ee54c14d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nginx",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-014e82803ff86408f",
            "private_dns": "ip-10-0-0-252.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.252",
            "public_ip": "34.201.114.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d76ccd4df93c034b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c28c51eb4c549c6",
            "tags": {
              "Name": "Public-Instance-0"
            },
            "tags_all": {
              "Name": "Public-Instance-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d2751d25f646b05a"
            ]
          },
          "dependencies": [
            "module.tf-instance.data.aws_ami.amazon_ec2",
            "module.tf-load-balancer.aws_lb.private-lb",
            "module.tf-security-group.aws_security_group.sg_lb_private",
            "module.tf-security-group.aws_security_group.sg_pub",
            "module.tf-subnet.aws_subnet.subnets-private",
            "module.tf-subnet.aws_subnet.subnets-pub",
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a4363a7d864a093",
            "arn": "arn:aws:ec2:us-east-1:817775426354:instance/i-051b0e873cc7e96cf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-051b0e873cc7e96cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nginx",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-084bf3fd68948166e",
            "private_dns": "ip-10-0-2-140.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.140",
            "public_ip": "54.82.59.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0208ba707ca253fde",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03f508851217417d4",
            "tags": {
              "Name": "Public-Instance-1"
            },
            "tags_all": {
              "Name": "Public-Instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d2751d25f646b05a"
            ]
          },
          "dependencies": [
            "module.tf-instance.data.aws_ami.amazon_ec2",
            "module.tf-load-balancer.aws_lb.private-lb",
            "module.tf-security-group.aws_security_group.sg_lb_private",
            "module.tf-security-group.aws_security_group.sg_pub",
            "module.tf-subnet.aws_subnet.subnets-private",
            "module.tf-subnet.aws_subnet.subnets-pub",
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-instance",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-tg-pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:817775426354:targetgroup/Private-tg/817a4d886cf0fcb4-2023071715574556740000000d",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:817775426354:targetgroup/Private-tg/817a4d886cf0fcb4",
            "target_id": "i-003ff6f2446ebe67a"
          },
          "dependencies": [
            "module.tf-instance.aws_instance.ec2-pri",
            "module.tf-instance.aws_instance.ec2-pub",
            "module.tf-instance.data.aws_ami.amazon_ec2",
            "module.tf-load-balancer.aws_lb.private-lb",
            "module.tf-load-balancer.aws_lb_target_group.private-tg",
            "module.tf-security-group.aws_security_group.sg_lb_private",
            "module.tf-security-group.aws_security_group.sg_pri",
            "module.tf-security-group.aws_security_group.sg_pub",
            "module.tf-subnet.aws_subnet.subnets-private",
            "module.tf-subnet.aws_subnet.subnets-pub",
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:817775426354:targetgroup/Private-tg/817a4d886cf0fcb4-2023071715574548910000000b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:817775426354:targetgroup/Private-tg/817a4d886cf0fcb4",
            "target_id": "i-00522bc1339a9e0fa"
          },
          "dependencies": [
            "module.tf-instance.aws_instance.ec2-pri",
            "module.tf-instance.aws_instance.ec2-pub",
            "module.tf-instance.data.aws_ami.amazon_ec2",
            "module.tf-load-balancer.aws_lb.private-lb",
            "module.tf-load-balancer.aws_lb_target_group.private-tg",
            "module.tf-security-group.aws_security_group.sg_lb_private",
            "module.tf-security-group.aws_security_group.sg_pri",
            "module.tf-security-group.aws_security_group.sg_pub",
            "module.tf-subnet.aws_subnet.subnets-private",
            "module.tf-subnet.aws_subnet.subnets-pub",
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-instance",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-tg-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:817775426354:targetgroup/Public-tg/2ab2e5f38aeaa960-2023071715574553710000000c",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:817775426354:targetgroup/Public-tg/2ab2e5f38aeaa960",
            "target_id": "i-0d5e1f675ee54c14d"
          },
          "dependencies": [
            "module.tf-instance.aws_instance.ec2-pub",
            "module.tf-instance.data.aws_ami.amazon_ec2",
            "module.tf-load-balancer.aws_lb.private-lb",
            "module.tf-load-balancer.aws_lb_target_group.public-tg",
            "module.tf-security-group.aws_security_group.sg_lb_private",
            "module.tf-security-group.aws_security_group.sg_pub",
            "module.tf-subnet.aws_subnet.subnets-private",
            "module.tf-subnet.aws_subnet.subnets-pub",
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:817775426354:targetgroup/Public-tg/2ab2e5f38aeaa960-2023071715574541290000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:817775426354:targetgroup/Public-tg/2ab2e5f38aeaa960",
            "target_id": "i-051b0e873cc7e96cf"
          },
          "dependencies": [
            "module.tf-instance.aws_instance.ec2-pub",
            "module.tf-instance.data.aws_ami.amazon_ec2",
            "module.tf-load-balancer.aws_lb.private-lb",
            "module.tf-load-balancer.aws_lb_target_group.public-tg",
            "module.tf-security-group.aws_security_group.sg_lb_private",
            "module.tf-security-group.aws_security_group.sg_pub",
            "module.tf-subnet.aws_subnet.subnets-private",
            "module.tf-subnet.aws_subnet.subnets-pub",
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-load-balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "private-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:817775426354:loadbalancer/app/Private-LB/c720d194d40495c0",
            "arn_suffix": "app/Private-LB/c720d194d40495c0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-Private-LB-628780796.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:817775426354:loadbalancer/app/Private-LB/c720d194d40495c0",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Private-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-086c07345d5ed183d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00195fda9b0b30b3f"
              },
              {
                "subnet_id": "subnet-04a98d27b5f221342"
              }
            ],
            "subnets": [
              "subnet-00195fda9b0b30b3f",
              "subnet-04a98d27b5f221342"
            ],
            "vpc_id": "vpc-0a43a3e161f39d6e8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.tf-security-group.aws_security_group.sg_lb_private",
            "module.tf-subnet.aws_subnet.subnets-private",
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-load-balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "public-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:817775426354:loadbalancer/app/Public-LB/71a45fa6e98f82c5",
            "arn_suffix": "app/Public-LB/71a45fa6e98f82c5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Public-LB-457041201.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:817775426354:loadbalancer/app/Public-LB/71a45fa6e98f82c5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Public-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0db58ce4c76e125fe"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03f508851217417d4"
              },
              {
                "subnet_id": "subnet-06c28c51eb4c549c6"
              }
            ],
            "subnets": [
              "subnet-03f508851217417d4",
              "subnet-06c28c51eb4c549c6"
            ],
            "vpc_id": "vpc-0a43a3e161f39d6e8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.tf-security-group.aws_security_group.sg_lb_pub",
            "module.tf-subnet.aws_subnet.subnets-pub",
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-load-balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "private_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:817775426354:listener/app/Private-LB/c720d194d40495c0/d35d5b870f3ff447",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:817775426354:targetgroup/Private-tg/817a4d886cf0fcb4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:817775426354:listener/app/Private-LB/c720d194d40495c0/d35d5b870f3ff447",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:817775426354:loadbalancer/app/Private-LB/c720d194d40495c0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tf-load-balancer.aws_lb.private-lb",
            "module.tf-load-balancer.aws_lb_target_group.private-tg",
            "module.tf-security-group.aws_security_group.sg_lb_private",
            "module.tf-subnet.aws_subnet.subnets-private",
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-load-balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:817775426354:listener/app/Public-LB/71a45fa6e98f82c5/078b1c84e52b49d9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:817775426354:targetgroup/Public-tg/2ab2e5f38aeaa960",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:817775426354:listener/app/Public-LB/71a45fa6e98f82c5/078b1c84e52b49d9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:817775426354:loadbalancer/app/Public-LB/71a45fa6e98f82c5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tf-load-balancer.aws_lb.public-lb",
            "module.tf-load-balancer.aws_lb_target_group.public-tg",
            "module.tf-security-group.aws_security_group.sg_lb_pub",
            "module.tf-subnet.aws_subnet.subnets-pub",
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-load-balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "private-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:817775426354:targetgroup/Private-tg/817a4d886cf0fcb4",
            "arn_suffix": "targetgroup/Private-tg/817a4d886cf0fcb4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:817775426354:targetgroup/Private-tg/817a4d886cf0fcb4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Private-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tg-private"
            },
            "tags_all": {
              "Name": "tg-private"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a43a3e161f39d6e8"
          },
          "dependencies": [
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-load-balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "public-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:817775426354:targetgroup/Public-tg/2ab2e5f38aeaa960",
            "arn_suffix": "targetgroup/Public-tg/2ab2e5f38aeaa960",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:817775426354:targetgroup/Public-tg/2ab2e5f38aeaa960",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Public-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tg-pub"
            },
            "tags_all": {
              "Name": "tg-pub"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a43a3e161f39d6e8"
          },
          "dependencies": [
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bfaf8d9ead2ac32b",
            "domain": "vpc",
            "id": "eipalloc-0bfaf8d9ead2ac32b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-206-45-81.compute-1.amazonaws.com",
            "public_ip": "52.206.45.81",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.tf-nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bfaf8d9ead2ac32b",
            "association_id": "eipassoc-0d92c4d81195d704f",
            "connectivity_type": "public",
            "id": "nat-0f5431b324f8903f2",
            "network_interface_id": "eni-0798b8250cae35e1f",
            "private_ip": "10.0.0.133",
            "public_ip": "52.206.45.81",
            "subnet_id": "subnet-06c28c51eb4c549c6",
            "tags": {
              "Name": "sprints-NAT"
            },
            "tags_all": {
              "Name": "sprints-NAT"
            }
          },
          "dependencies": [
            "module.tf-nat.aws_eip.eip",
            "module.tf-subnet.aws_subnet.subnets-pub",
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-route-table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817775426354:route-table/rtb-010e242bfe27361b9",
            "id": "rtb-010e242bfe27361b9",
            "owner_id": "817775426354",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f5431b324f8903f2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private RT"
            },
            "tags_all": {
              "Name": "private RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a43a3e161f39d6e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tf-nat.aws_eip.eip",
            "module.tf-nat.aws_nat_gateway.nat",
            "module.tf-subnet.aws_subnet.subnets-pub",
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-route-table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817775426354:route-table/rtb-00d76fa8eb375a217",
            "id": "rtb-00d76fa8eb375a217",
            "owner_id": "817775426354",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c614653809c6f0a4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public RT"
            },
            "tags_all": {
              "Name": "public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a43a3e161f39d6e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tf-igw.aws_internet_gateway.igw",
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-route-table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06cdef0764d9cf283",
            "route_table_id": "rtb-010e242bfe27361b9",
            "subnet_id": "subnet-00195fda9b0b30b3f"
          },
          "dependencies": [
            "module.tf-nat.aws_eip.eip",
            "module.tf-nat.aws_nat_gateway.nat",
            "module.tf-route-table.aws_route_table.private_rt",
            "module.tf-subnet.aws_subnet.subnets-private",
            "module.tf-subnet.aws_subnet.subnets-pub",
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060c59e367f33321b",
            "route_table_id": "rtb-010e242bfe27361b9",
            "subnet_id": "subnet-04a98d27b5f221342"
          },
          "dependencies": [
            "module.tf-nat.aws_eip.eip",
            "module.tf-nat.aws_nat_gateway.nat",
            "module.tf-route-table.aws_route_table.private_rt",
            "module.tf-subnet.aws_subnet.subnets-private",
            "module.tf-subnet.aws_subnet.subnets-pub",
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-route-table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d637737f62032a23",
            "route_table_id": "rtb-00d76fa8eb375a217",
            "subnet_id": "subnet-06c28c51eb4c549c6"
          },
          "dependencies": [
            "module.tf-igw.aws_internet_gateway.igw",
            "module.tf-route-table.aws_route_table.public_rt",
            "module.tf-subnet.aws_subnet.subnets-pub",
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c61e19542d23ff2",
            "route_table_id": "rtb-00d76fa8eb375a217",
            "subnet_id": "subnet-03f508851217417d4"
          },
          "dependencies": [
            "module.tf-igw.aws_internet_gateway.igw",
            "module.tf-route-table.aws_route_table.public_rt",
            "module.tf-subnet.aws_subnet.subnets-pub",
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_lb_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817775426354:security-group/sg-086c07345d5ed183d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086c07345d5ed183d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230717155415516200000003",
            "name_prefix": "terraform-",
            "owner_id": "817775426354",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private-sg-lb"
            },
            "tags_all": {
              "Name": "Private-sg-lb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a43a3e161f39d6e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_lb_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817775426354:security-group/sg-0db58ce4c76e125fe",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db58ce4c76e125fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230717155413674000000001",
            "name_prefix": "terraform-",
            "owner_id": "817775426354",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Pubile-sg-lb"
            },
            "tags_all": {
              "Name": "Pubile-sg-lb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a43a3e161f39d6e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817775426354:security-group/sg-0a0f25d70a04b38b5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0f25d70a04b38b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230717155415394500000002",
            "name_prefix": "terraform-",
            "owner_id": "817775426354",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private-sg"
            },
            "tags_all": {
              "Name": "Private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a43a3e161f39d6e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817775426354:security-group/sg-0d2751d25f646b05a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d2751d25f646b05a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230717155415685300000004",
            "name_prefix": "terraform-",
            "owner_id": "817775426354",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public-sg"
            },
            "tags_all": {
              "Name": "Public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a43a3e161f39d6e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-subnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817775426354:subnet/subnet-00195fda9b0b30b3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00195fda9b0b30b3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817775426354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-Sub 1"
            },
            "tags_all": {
              "Name": "private-Sub 1"
            },
            "vpc_id": "vpc-0a43a3e161f39d6e8"
          },
          "dependencies": [
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        },
        {
          "index_key": "private-subnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817775426354:subnet/subnet-04a98d27b5f221342",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a98d27b5f221342",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817775426354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-Sub 2"
            },
            "tags_all": {
              "Name": "private-Sub 2"
            },
            "vpc_id": "vpc-0a43a3e161f39d6e8"
          },
          "dependencies": [
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-subnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817775426354:subnet/subnet-06c28c51eb4c549c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c28c51eb4c549c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817775426354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-Sub 1"
            },
            "tags_all": {
              "Name": "public-Sub 1"
            },
            "vpc_id": "vpc-0a43a3e161f39d6e8"
          },
          "dependencies": [
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        },
        {
          "index_key": "public-subnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817775426354:subnet/subnet-03f508851217417d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f508851217417d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817775426354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-Sub 2"
            },
            "tags_all": {
              "Name": "public-Sub 2"
            },
            "vpc_id": "vpc-0a43a3e161f39d6e8"
          },
          "dependencies": [
            "module.tf-vpc.aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sprints_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817775426354:vpc/vpc-0a43a3e161f39d6e8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02b551f22a49a32b8",
            "default_route_table_id": "rtb-02b67adb774e3a727",
            "default_security_group_id": "sg-0c9a72fd364b62840",
            "dhcp_options_id": "dopt-00719136923f1591a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a43a3e161f39d6e8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02b67adb774e3a727",
            "owner_id": "817775426354",
            "tags": {
              "Name": "sprints"
            },
            "tags_all": {
              "Name": "sprints"
            }
          }
        }
      ]
    }
  ]
}